--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -1,7 +1,13 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    border: none;
-    font-family: 'Google Sans', Roboto, Arial, sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: none;
+  font-family: 'Raleway', sans-serif;
+  text-decoration: none;
+}
+
+ul,
+li {
+  list-style: none;
 }
