--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -2,6 +2,25 @@ html {
   background: var(--app-bg-color);
 }
 
+.mainBg,
+.progrBg,
+.designBg {
+  background-size: 900px;
+}
+
+.mainBg {
+  background-image: url('../svg/bg-image-mixed.svg');
+  background-position: center;
+}
+
+.progrBg {
+  background-image: url('../svg/bg-image-progr.svg');
+}
+
+.designBg {
+  background-image: url('../svg/designBg.svg');
+}
+
 .header,
 .footer {
   height: var(--header-footer-height);
@@ -11,13 +30,25 @@ html {
   padding: var(--header-footer-padding);
 }
 
+.footer {
+  padding-bottom: 15px;
+}
+
 .header {
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   top: 0;
   width: 100vw;
   box-shadow: var(--header-shadow);
   background: var(--header-bg-color);
+}
+
+button:hover {
+  border: 1px solid var(--botton-hover-color);
+  color: var(--botton-hover-color);
+  transition: 0.5s;
+  box-shadow: 0 0 5px var(--botton-hover-color);
+  text-shadow: 0 0 5px var(--botton-hover-color);
 }
 
 .menu {
@@ -53,17 +84,34 @@ html {
   align-items: center;
 }
 
-.nav-item {
-  font-size: var(--gen-font-size);
-}
-
 .nav-item,
 .author-name {
   color: var(--text-color);
+  font-size: var(--gen-font-size);
+}
+
+.nav-item:hover,
+.author-name:hover {
+  background-image: var(--gradient);
+  cursor: pointer;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  background-size: 400%;
+  animation: text-icon-animation 2s alternate infinite;
+}
+
+@keyframes text-icon-animation {
+  from {
+    background-position: left;
+  }
+  to {
+    background-position: right;
+  }
 }
 
 .author-name {
-  font-size: var(--author-name);
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -72,7 +120,19 @@ html {
 .icon {
   width: var(--icon-size);
   height: var(--icon-size);
-  border-radius: 4px;
+  cursor: pointer;
+}
+
+.icon svg path {
+  fill: var(--text-color);
+}
+
+.icon svg {
+  border-radius: 5px;
+}
+
+.slider-text {
+  transition: opacity 1s ease-in-out;
 }
 
 .left {
@@ -106,7 +166,7 @@ html {
 }
 
 .item-list-wrapper {
-  width: calc(var(--item-width) * 3 + 5vw * 2);
+  width: calc(var(--item-width) * 3 + 10vw);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -114,6 +174,23 @@ html {
   flex-wrap: wrap;
   gap: var(--item-gap);
   margin: var(--top-bottom-margin);
+}
+
+.right-arrow {
+  left: -70px;
+}
+
+.left-arrow,
+.right-arrow {
+  position: absolute;
+  top: 45%;
+  z-index: 1;
+  width: 70px;
+}
+
+.left-arrow {
+  transform: rotate(180deg);
+  right: -70px;
 }
 
 .main-body {
@@ -125,7 +202,7 @@ html {
 
 .project-image--full-height {
   width: 250px;
-  height: 450px;
+  height: 370px;
   background: #d9d9d9;
   box-shadow: var(--item-shadow);
   border-radius: 20px;
@@ -141,17 +218,28 @@ html {
 }
 
 .label {
+  background-image: var(--label-gradient);
+  cursor: pointer;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  background-size: 400%;
+  animation: text-icon-animation 5s alternate infinite;
+}
+
+.label-item {
   color: var(--text-color);
 }
 
 .desc {
-  color: var(--heading-text-color);
-  font-style: italic;
+  color: var(--paragraph-color);
 }
 
 .project-info,
 .aditional-desc {
   color: var(--paragraph-color);
+  font-size: 14px;
 }
 
 .arrow {
@@ -161,6 +249,19 @@ html {
   top: 45%;
   transform: rotate(180deg);
   width: 70px;
+}
+
+.projects-arrow {
+  position: absolute;
+  transform: rotate(-90deg);
+  top: 105%;
+}
+
+.projects-text {
+  position: absolute;
+  color: var(--header-bg-color);
+  top: 110%;
+  right: 51%;
 }
 
 .info {
@@ -188,8 +289,8 @@ html {
 }
 
 .galery-item {
-  min-height: 250px;
-  min-width: 250px;
+  min-height: 200px;
+  min-width: 200px;
   background: #d9d9d9;
   box-shadow: var(--item-shadow);
 }
@@ -199,7 +300,7 @@ html {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  padding: 50px 0 100px 0;
+  padding: 50px 0;
 }
 
 .project-info-label {
@@ -214,7 +315,6 @@ html {
 }
 
 .about-me-wrapper {
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -228,12 +328,13 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 .experience-info {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  width: 700px;
+  width: 60vw;
   justify-items: center;
 }
 
@@ -243,14 +344,16 @@ html {
   justify-content: center;
   width: 200px;
   height: 50px;
-  background-color: #d9d9d9;
+  background-color: var(--exp-first-bg-color);
   border-radius: 50px;
   box-shadow: var(--exp-shadow);
   font-size: 14px;
+  color: var(--text-color);
 }
 
 .experience-container {
   margin: 20px 0;
+  position: relative;
 }
 
 .experience-info-wrapper {
@@ -278,7 +381,32 @@ html {
   justify-content: center;
   flex-direction: column;
   gap: 100px;
-  margin-bottom: 150px;
+  padding-bottom: 150px;
+}
+
+.arrow-exp-left {
+  position: absolute;
+  left: -153px;
+}
+
+.arrow-exp-right {
+  position: absolute;
+  right: -153px;
+  transform: rotate(-180deg);
+}
+
+.exp-period-left,
+.exp-period-right {
+  position: absolute;
+  top: -10px;
+}
+
+.exp-period-left {
+  left: -100px;
+}
+
+.exp-period-right {
+  right: -100px;
 }
 
 .skill-icon {
@@ -306,6 +434,21 @@ html {
 }
 
 @media screen and (max-width: 675px) {
+  .projects-text,
+  .projects-arrow {
+    display: none;
+  }
+
+  .mainBg,
+  .progrBg,
+  .designBg {
+    background-size: 400px;
+  }
+
+  .arrow {
+    display: none;
+  }
+
   .item-list-wrapper {
     width: 500px;
   }
@@ -344,6 +487,8 @@ html {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    color: var(--text-color);
+    font-size: 12px;
   }
 
   .footer-name {
@@ -369,9 +514,13 @@ html {
   .about-me-wrapper {
     flex-direction: column;
     gap: 70px;
-    height: 6cqmax;
     margin-top: var(--header-footer-height);
     margin-bottom: 100px;
+    width: 80vw;
+  }
+
+  .exp-text {
+    width: 80vw;
   }
 
   .info {
@@ -403,23 +552,35 @@ html {
 
   .side-menu {
     position: fixed;
-    background: #787676;
+    background: var(--exp-sec-bg-color);
     height: 100vh;
-    width: 40vw;
+    width: 60vw;
     top: var(--header-footer-height);
     right: 0;
     box-shadow: var(--side-menu-shadow);
+    z-index: 2;
   }
 
   .side-menu-items {
-    padding: var(--side-menu-gaps);
+    padding: var(--side-menu-gaps) 10px;
     display: flex;
     flex-direction: column;
     gap: var(--side-menu-gaps);
   }
 
   .side-menu-item {
-    padding: 5px;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    height: 40px;
+    color: var(--text-color);
+    font-weight: 600;
+  }
+
+  .side-menu-item:focus,
+  .side-menu-item:hover {
+    border-radius: 5px;
+    background-color: var(--heading-text-color);
   }
 
   .btn-container {
@@ -428,6 +589,14 @@ html {
   }
 
   .main-logo {
+    width: 40px;
+  }
+
+  .label {
+    font-size: 22px;
+  }
+
+  .skill-icon {
     width: 40px;
   }
 }
@@ -460,5 +629,17 @@ html {
 
   .logo {
     width: 17px;
+  }
+
+  .galery-item {
+    min-height: 250px;
+    min-width: 250px;
+  }
+}
+
+@media screen and (max-width: 905px) {
+  .left-arrow,
+  .right-arrow {
+    display: none;
   }
 }
