--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,19 +1,55 @@
+html {
+  background: var(--app-bg-color);
+}
+
+.mainBg,
+.progrBg,
+.designBg {
+  background-size: 900px;
+}
+
+.mainBg {
+  background-image: url('../svg/bg-image-mixed.svg');
+  background-position: center;
+}
+
+.progrBg {
+  background-image: url('../svg/bg-image-progr.svg');
+}
+
+.designBg {
+  background-image: url('../svg/designBg.svg');
+}
+
 .header,
 .footer {
   height: var(--header-footer-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: rgb(186, 186, 186, 1);
   padding: var(--header-footer-padding);
+}
+
+.footer {
+  padding-bottom: 15px;
 }
 
 .header {
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   top: 0;
   width: 100vw;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: var(--header-shadow);
+  background: var(--header-bg-color);
+}
+
+button:hover {
+  border: 1px solid var(--botton-hover-color);
+  color: var(--botton-hover-color);
+  transition: 0.5s;
+  box-shadow: 0 0 5px var(--botton-hover-color);
+  text-shadow: 0 0 5px var(--botton-hover-color);
+  cursor: pointer;
 }
 
 .menu {
@@ -21,23 +57,12 @@
 }
 
 .logo {
-  width: var(--logo-width);
-  height: var(--logo-height);
-  background: rgb(0, 0, 0, 20%);
-  font-size: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: black;
+  width: 15px;
 }
 
 .main-logo {
   width: 70px;
   height: 140px;
-  background: #d9d9d9;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .logo-wrapper {
@@ -54,62 +79,133 @@
 }
 
 .nav-items {
-  width: 230px;
-  gap: var(--nav-gap);
+  width: 200px;
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
 }
 
-.nav-item {
-  color: black;
+.nav-item,
+.author-name {
+  color: var(--text-color);
+}
+
+.nav-item:hover,
+.author-name:hover {
+  background-image: var(--gradient);
+  cursor: pointer;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  background-size: 400%;
+  animation: text-icon-animation 2s alternate infinite;
+}
+
+@keyframes text-icon-animation {
+  from {
+    background-position: left;
+  }
+  to {
+    background-position: right;
+  }
 }
 
 .author-name {
-  font-size: var(--author-name);
   display: flex;
   align-items: center;
   font-weight: 500;
-  color: black;
 }
 
 .icon {
-  width: 30px;
-  height: 30px;
-  background: rgb(0, 0, 0, 20%);
+  width: var(--icon-size);
+  height: var(--icon-size);
+  cursor: pointer;
 }
 
-.image-slider {
-  height: 100vh;
-  background: rgb(240, 240, 255, 1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: var(--header-footer-height);
+.icon svg path {
+  fill: var(--text-color);
+}
+
+.icon svg {
+  border-radius: 5px;
+}
+
+.slider-text {
+  transition: opacity 1s ease-in-out;
+}
+
+.left {
+  left: 100px;
+  width: 15vw;
+}
+
+.right {
+  right: 100px;
+}
+
+.resize-animation-stopper * {
+  animation: none !important;
+  transition: none !important;
 }
 
 .item-wrapper {
-  width: 200px;
+  width: var(--item-width);
   height: 270px;
   flex-shrink: 0;
-  box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--item-shadow);
   border-radius: 20px;
-  background: rgb(217, 217, 217, 0.6);
+  background: var(--item-bg-color);
   padding: 16px;
+  position: relative;
+  border: 1px solid var(--item-bg-color);
+}
+
+.item-wrapper:hover {
+  border: 1px solid var(--botton-hover-color);
+  color: var(--botton-hover-color);
+  transition: 0.5s;
+  box-shadow: 0 0 5px var(--botton-hover-color);
+  text-shadow: 0 0 5px var(--botton-hover-color);
+  cursor: pointer;
 }
 
 .project-image {
   width: 170px;
   height: 180px;
-  background: #d9d9d9;
+}
+
+.item-list-wrapper .btn-container {
+  display: flex;
+  justify-content: center;
 }
 
 .item-list-wrapper {
-  width: calc(200px * 3 + 5vw * 2);
+  width: calc(var(--item-width) * 3 + 10vw);
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: row-reverse;
   flex-wrap: wrap;
-  gap: 5vw;
-  margin: 100px 0;
+  gap: var(--item-gap);
+  margin: var(--top-bottom-margin);
+}
+
+.right-arrow {
+  left: -71px;
+}
+
+.left-arrow,
+.right-arrow {
+  position: absolute;
+  top: 45%;
+  z-index: 1;
+  width: 70px;
+}
+
+.left-arrow {
+  transform: rotate(180deg);
+  right: -71px;
 }
 
 .main-body {
@@ -121,9 +217,9 @@
 
 .project-image--full-height {
   width: 250px;
-  height: 450px;
+  height: auto;
   background: #d9d9d9;
-  box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--item-shadow);
   border-radius: 20px;
 }
 
@@ -136,6 +232,56 @@
   height: 100vh;
 }
 
+.label {
+  background-image: var(--label-gradient);
+  cursor: pointer;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  background-size: 400%;
+  animation: text-icon-animation 5s alternate infinite;
+}
+
+.label-item {
+  color: var(--text-color);
+}
+
+.desc {
+  color: var(--paragraph-color);
+}
+
+.project-info,
+.aditional-desc {
+  color: var(--paragraph-color);
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.75px;
+  text-align: left;
+}
+
+.arrow {
+  position: absolute;
+  z-index: 1;
+  right: 94.5%;
+  top: 45%;
+  transform: rotate(180deg);
+  width: 70px;
+}
+
+.projects-arrow {
+  position: absolute;
+  transform: rotate(-90deg);
+  top: 105%;
+}
+
+.projects-text {
+  position: absolute;
+  color: var(--header-bg-color);
+  top: 110%;
+  right: 51%;
+}
+
 .info {
   display: flex;
   flex-direction: column;
@@ -144,10 +290,12 @@
 }
 
 .button-link {
-  width: 100px;
-  height: 30px;
+  width: 120px;
+  height: 35px;
   border-radius: 50px;
-  box-shadow: 1px 3px 3px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--button-shadow);
+  background: var(--button-link);
+  color: var(--text-color);
 }
 
 .additional-info-wrapper {
@@ -156,12 +304,15 @@
   align-items: center;
   flex-direction: column;
   padding: 0 10vw;
+  height: 100vh;
 }
 
 .galery-item {
   min-height: 250px;
+  height: 250px;
+  width: 250px;
   min-width: 250px;
-  background: #d9d9d9;
+  box-shadow: var(--item-shadow);
 }
 
 .galery-wrapper {
@@ -169,7 +320,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  padding: 50px 0 100px 0;
+  padding: 50px 0;
 }
 
 .project-info-label {
@@ -184,24 +335,26 @@
 }
 
 .about-me-wrapper {
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 100px;
-  padding: 0 10vw;
+  flex-direction: column;
+  gap: 40px;
+  width: 50vw;
+  text-align: justify;
 }
 
-.about-photo {
-  height: 250px;
-  min-width: 250px;
-  background: #d9d9d9;
+.about-me-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .experience-info {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  width: 700px;
+  width: 60vw;
   justify-items: center;
 }
 
@@ -211,14 +364,17 @@
   justify-content: center;
   width: 200px;
   height: 50px;
-  background-color: #d9d9d9;
+  background-color: var(--exp-first-bg-color);
   border-radius: 50px;
-  box-shadow: 3px 6px 6px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--exp-shadow);
   font-size: 14px;
+  color: var(--text-color);
+  text-align: center;
 }
 
 .experience-container {
   margin: 20px 0;
+  position: relative;
 }
 
 .experience-info-wrapper {
@@ -228,31 +384,56 @@
   margin-bottom: 100px;
 }
 
-.experience-text {
-  text-align: justify;
+.exp-text {
+  width: 50vw;
+  margin: 50px 0;
+  text-align: center;
 }
 
 .experience-text-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 10vw;
   margin-bottom: 200px;
+  text-align: justify;
 }
 
 .skill-wrapper {
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 100px;
-  margin-bottom: 200px;
+  padding-bottom: 150px;
+}
+
+.arrow-exp-left {
+  position: absolute;
+  left: -153px;
+}
+
+.arrow-exp-right {
+  position: absolute;
+  right: -153px;
+  transform: rotate(-180deg);
+}
+
+.exp-period-left,
+.exp-period-right {
+  position: absolute;
+  top: -10px;
+  font-size: 12px;
+}
+
+.exp-period-left {
+  left: -100px;
+}
+
+.exp-period-right {
+  right: -100px;
 }
 
 .skill-icon {
-  width: 60px;
-  height: 60px;
-  background: rgb(0, 0, 0, 20%);
+  width: 50px;
 }
 
 .icon-wrapper {
@@ -260,6 +441,7 @@
   grid-template-columns: repeat(4, 1fr);
   column-gap: 4vw;
   row-gap: 4vw;
+  align-items: center;
 }
 
 .skill {
@@ -270,7 +452,35 @@
   gap: 40px;
 }
 
+.btn-container {
+  width: 200px;
+}
+
 @media screen and (max-width: 675px) {
+  .project-info,
+  .aditional-desc {
+    text-align: justify;
+  }
+
+  .projects-text,
+  .projects-arrow {
+    display: none;
+  }
+
+  .mainBg,
+  .progrBg,
+  .designBg {
+    background-size: 400px;
+  }
+
+  .arrow {
+    display: none;
+  }
+
+  .item-list-wrapper {
+    width: 500px;
+  }
+
   .author-name,
   .nav-items {
     display: none;
@@ -279,15 +489,7 @@
   .menu {
     display: flex;
     width: 26px;
-  }
-
-  .item-list-wrapper {
-    width: 200px;
-    gap: 10vw;
-  }
-
-  .image-slider {
-    height: 20vh;
+    cursor: pointer;
   }
 
   .logo-wrapper {
@@ -295,7 +497,6 @@
   }
 
   .footer-wrapper--mobile {
-    background: rgb(186, 186, 186, 1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -315,6 +516,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    color: var(--text-color);
+    font-size: 12px;
   }
 
   .footer-name {
@@ -327,9 +530,9 @@
   }
 
   .experience-data {
-    width: 40vw;
-    height: 40px;
-    font-size: 12px;
+    width: var(--exp-width);
+    height: var(--exp-height);
+    font-size: 11px;
   }
 
   .experience-text {
@@ -340,9 +543,13 @@
   .about-me-wrapper {
     flex-direction: column;
     gap: 70px;
-    height: 6cqmax;
     margin-top: var(--header-footer-height);
     margin-bottom: 100px;
+    width: 80vw;
+  }
+
+  .exp-text {
+    width: 80vw;
   }
 
   .info {
@@ -374,22 +581,96 @@
 
   .side-menu {
     position: fixed;
-    background: #787676;
+    background: var(--exp-sec-bg-color);
     height: 100vh;
-    width: 40vw;
+    width: 60vw;
     top: var(--header-footer-height);
     right: 0;
-    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
+    box-shadow: var(--side-menu-shadow);
+    z-index: 2;
   }
 
   .side-menu-items {
-    padding: 20px;
+    padding: var(--side-menu-gaps) 10px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: var(--side-menu-gaps);
   }
 
   .side-menu-item {
-    padding: 5px;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    height: 40px;
+    color: var(--text-color);
+    font-weight: 600;
+  }
+
+  .side-menu-item:focus,
+  .side-menu-item:hover {
+    border-radius: 5px;
+    background-color: var(--image-slider-bg-color);
+    color: var(--exp-sec-bg-color);
+    transition: background-color 0.1s ease-in;
+  }
+
+  .btn-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .main-logo {
+    width: 40px;
+  }
+
+  .label {
+    font-size: 22px;
+  }
+
+  .skill-icon {
+    width: 40px;
+  }
+}
+
+@media screen and (min-width: 675px) and (max-width: 1250px) {
+  .main-logo {
+    width: 40px;
+  }
+}
+
+@media screen and (min-width: 1250px) {
+  .header {
+    height: var(--header-footer-height--large);
+  }
+
+  .icon {
+    width: var(--icon-size--large);
+    height: var(--icon-size--large);
+    border-radius: 4px;
+  }
+
+  .nav-items {
+    width: 230px;
+    gap: var(--nav-gap--large);
+  }
+
+  .nav-item {
+    font-size: var(--author-name--large);
+  }
+
+  .logo {
+    width: 17px;
+  }
+
+  .galery-item {
+    min-height: 250px;
+    min-width: 250px;
+  }
+}
+
+@media screen and (max-width: 905px) {
+  .left-arrow,
+  .right-arrow {
+    display: none;
   }
 }
