--- a/src/assets/styles/vars.css
+++ b/src/assets/styles/vars.css
@@ -1,8 +1,58 @@
 :root {
-  --author-name: 16px;
-  --nav-gap: 20px;
-  --header-footer-height: 56px;
+  /*vars*/
+  --author-name: 12px;
+  --gen-font-size: 14px;
+  --author-name--large: 16px;
+  --nav-gap: 15px;
+  --nav-gap--large: 20px;
+  --header-footer-height--large: 56px;
+  --header-footer-height: 40px;
   --header-footer-padding: 0 40px;
   --logo-height: 36px;
   --logo-width: 26px;
+  --item-gap: 5vw;
+  --top-bottom-margin: 100px 0;
+  --icon-size: 20px;
+  --icon-size--large: 25px;
+  --slider-width: 70vw;
+  --item-width: 200px;
+  --general-padding: 0 10vw;
+  --side-menu-gaps: 20px;
+  --exp-height: 40px;
+  --exp-width: 40vw;
+
+  /*colors*/
+  --header-bg-color: rgb(103, 14, 206);
+  --image-slider-bg-color: rgb(240, 240, 255);
+  --app-bg-color: rgb(36, 36, 71);
+  --item-bg-color: rgb(85, 82, 235);
+  --button-link: rgb(16, 12, 222);
+  --text-color: rgb(255, 255, 255);
+  --paragraph-color: rgb(208, 206, 206);
+  --heading-text-color: rgb(108, 14, 218);
+  --arrow-color: rgb(194, 194, 194);
+  --exp-first-bg-color: rgb(218, 8, 236);
+  --exp-sec-bg-color: rgb(163, 8, 236);
+  --exp-third-bg-color: rgb(122, 8, 236);
+  --exp-fourth-bg-color: rgb(94, 8, 236);
+  --botton-hover-color: rgb(218, 8, 236);
+
+  /*shadows*/
+  --header-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+  --item-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.25);
+  --button-shadow: 1px 3px 3px 0px rgba(0, 0, 0, 0.25);
+  --exp-shadow: 3px 6px 6px 0px rgba(0, 0, 0, 0.25);
+  --side-menu-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
+
+  /*gradients*/
+  --gradient: linear-gradient(
+    45deg,
+    #ff52ce,
+    #ffffff,
+    #5fbdff,
+    #9dfc21,
+    #ffffff,
+    #00aa99
+  );
+  --label-gradient: linear-gradient(45deg, #ff52ce, var(--heading-text-color));
 }
